# pycli_cookiecutter

./: cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.repo_name }}/: makefile  pyproject.toml  setup.py
{{ cookiecutter.repo_name }}/requirements/: development.txt  distribution.txt
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/: __main__.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/cli/: __init__.py  debug.py
