[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "{{cookiecutter.repo_name}}"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[project.scripts]
superglue = "{{cookiecutter.repo_name}}.__main__:main"


[tool.semantic_release]
version_variable = "{{cookiecutter.repo_name}}/cli/version.py:__version__"
version_toml = "pyproject.toml:project.version"
version_pattern = "README.md:VERSION {version}"
upload_to_pypi = false

[tool.black]
line_length = 120
